Completed tag selectors and the first item in class selectors

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>CSS Fundamentals</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Fira+Mono" rel="stylesheet">
+
     <!-- Un-comment the following line to see what the document looks like with the CSS Reset applied -->
     <!-- <link rel="stylesheet" href="http://meyerweb.com/eric/tools/css/reset/reset.css"> -->
 
@@ -16,6 +18,25 @@
 
     <style>
       /* Put your styles here to get started */
+html {
+  font-size: 20px;
+}
+
+h1 h2 {
+  font-family: "Fira Mono", monospace;
+}
+
+header {
+  border-bottom: 2px solid #3961a0;
+}
+
+.class-list {
+  list-style-type: square;
+}
+
+.item {
+  border: 1px dash #ce9f31;
+}
 
       /*
         After you've finished the "Tag Selectors" exercises, move your styles
