Gave elemnts with class 'item' a border

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@ header {
 }
 
 .item {
-  border: 1px dash #ce9f31;
+  border: 2px solid #ce9f31;
 }
+
+
 
       /*
         After you've finished the "Tag Selectors" exercises, move your styles
