Applied styles to classes 'odd' and 'even'

--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@ header {
   border: 2px solid #ce9f31;
 }
 
+.even {
+  background-color: grey;
+}
 
+.odd {
+  background-color: black;
+  color: white;
+}
 
       /*
         After you've finished the "Tag Selectors" exercises, move your styles
