--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ html {
   font-size: 20px;
 }
 
-h1 h2 {
+h1, h2 {
   font-family: "Fira Mono", monospace;
 }
 
@@ -45,6 +45,14 @@ header {
 .odd {
   background-color: black;
   color: white;
+}
+
+#item1 {
+  font-size: 30px;
+}
+
+#item2 {
+  text-align: right;
 }
 
       /*
