Completed #5 of advanced selectors

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ html {
 
 h1, h2 {
   font-family: "Fira Mono", monospace;
-}
+ }
 
 header {
   border-bottom: 2px solid #3961a0;
@@ -55,6 +55,15 @@ header {
   text-align: right;
 }
 
+
+
+ol > li > ul > li:hover {
+  background-color: yellow;
+}
+
+ol > li > ul > li:active {
+  background-color: red;
+}
       /*
         After you've finished the "Tag Selectors" exercises, move your styles
         into the 'styles.css' file and replace this <style> tag and its contents
