Completed  of advanced selectors

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@ header {
   text-align: right;
 }
 
-
+ol > li > p > a:first-child {
+  text-decoration: none;
+}
 
 ol > li > ul > li:hover {
   background-color: yellow;
