Revised #4 so underline is gone only when hovered

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ header {
   text-align: right;
 }
 
-ol > li > p > a:first-child {
+ol > li > p > a:first-child:hover {
   text-decoration: none;
 }
 
