Completed #1 of advanced selectors

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@ header {
   text-align: right;
 }
 
+ol > li > p {
+  padding: 2px;
+  background-color: grey;
+}
+
 ol > li > p > a:first-child:hover {
   text-decoration: none;
 }
