Completed #3 of advanced selectors. Finished!

--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@ ol > li > p {
   background-color: grey;
 }
 
+ol > li:nth-child(2n+1) > p {
+  background-color: green;
+}
+
 ol > li > p > a:first-child:hover {
   text-decoration: none;
 }
